--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid android:color="@color/my_black"/>
+    <solid android:color="@color/my_white2"/>
 
     <stroke android:width="4dp"
         android:color="@color/yellow_2"/>
