--- a/app/src/main/res/layout/activity_add_images.xml
+++ b/app/src/main/res/layout/activity_add_images.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AddImagesActivity"
-    android:background="@color/my_black">
+    android:background="@color/my_white2">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -39,7 +39,7 @@
                     android:layout_marginTop="30dp"
                     android:backgroundTint="@color/yellow_2"
                     android:text="UPLOAD"
-                    android:textColor="@color/my_black"
+                    android:textColor="@color/my_white2"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -50,7 +50,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Report:"
-                    android:textColor="@color/my_white"
+                    android:textColor="@color/my_black"
                     android:layout_marginHorizontal="30dp"
                     android:textSize="18sp"
                     android:layout_marginTop="20dp"
@@ -62,7 +62,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Press the upload button to see the report"
-                    android:textColor="@color/my_white"
+                    android:textColor="@color/my_black"
                     android:textSize="16sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -104,7 +104,7 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:background="@drawable/home_icon"
-                    android:backgroundTint="@color/my_white"
+                    android:backgroundTint="@color/my_black"
                     android:elevation="5dp"/>
 
             </LinearLayout>
@@ -134,7 +134,7 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:background="@drawable/account_icon"
-                    android:backgroundTint="@color/my_white"
+                    android:backgroundTint="@color/my_black"
                     android:elevation="5dp"/>
 
             </LinearLayout>
@@ -152,7 +152,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:background="@drawable/camera_icon"
-            android:backgroundTint="@color/my_black"
+            android:backgroundTint="@color/my_white2"
             android:layout_centerInParent="true"/>
 
     </RelativeLayout>
