--- a/app/src/main/res/layout/activity_fertilizer.xml
+++ b/app/src/main/res/layout/activity_fertilizer.xml
@@ -5,16 +5,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".FertilizerActivity"
-    android:background="@color/my_black">
+    android:background="@color/my_white2">
+    <TextView
+        android:id="@+id/subheading"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Enter information for fertilizer recommendation:"
+        android:textColor="@color/my_black"
+        android:layout_below="@+id/topNav"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="20dp"/>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/navLayout"
-        android:layout_below="@+id/topNav">
+        android:layout_below="@+id/subheading">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="10dp"
             android:layout_marginHorizontal="20dp">
 
             <LinearLayout
@@ -95,7 +105,7 @@
                 android:text="Suggest"
                 android:backgroundTint="@color/yellow_2"
                 android:textStyle="bold"
-                android:textColor="@color/my_black"
+                android:textColor="@color/my_white2"
                 android:textSize="16sp"
                 android:layout_marginHorizontal="50dp"
                 android:layout_below="@+id/ll_input"/>
@@ -106,7 +116,7 @@
                 android:layout_height="wrap_content"
                 android:text="Result: "
                 android:textSize="14sp"
-                android:textColor="@color/my_white"
+                android:textColor="@color/my_black"
                 android:layout_below="@+id/FsuggestBtn"
                 android:layout_marginTop="10dp"
                 android:layout_marginHorizontal="16dp"/>
@@ -116,7 +126,7 @@
                 android:layout_height="wrap_content"
                 android:text="Press the Suggest button for the suggestions"
                 android:textSize="14sp"
-                android:textColor="@color/my_white"
+                android:textColor="@color/my_black"
                 android:layout_below="@+id/result_tv"
                 android:layout_marginTop="10dp"
                 android:layout_marginHorizontal="16dp"/>
@@ -130,7 +140,7 @@
         android:layout_height="wrap_content"
         android:text="Choose Recommendation:"
         android:textStyle="bold"
-        android:textColor="@color/my_white"
+        android:textColor="@color/my_black"
         android:layout_margin="20dp"
         android:textSize="20sp"
         android:layout_alignParentTop="true"/>
@@ -144,7 +154,7 @@
         <View
             android:layout_width="1dp"
             android:layout_height="30dp"
-            android:background="@color/my_black"
+            android:background="@color/my_white2"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="17dp"/>
         <LinearLayout
@@ -178,7 +188,7 @@
                 android:layout_weight="1"
                 android:text="Fertilizer"
                 android:textAlignment="center"
-                android:textColor="@color/my_black"
+                android:textColor="@color/my_white2"
                 android:textStyle="bold"
                 android:textSize="16sp" />
         </LinearLayout>
@@ -244,7 +254,7 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:background="@drawable/account_icon"
-                    android:backgroundTint="@color/my_white"
+                    android:backgroundTint="@color/my_black"
                     android:elevation="5dp"/>
 
             </LinearLayout>
@@ -261,7 +271,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:background="@drawable/camera_icon"
-            android:backgroundTint="@color/my_white"
+            android:backgroundTint="@color/my_black"
             android:layout_centerInParent="true"/>
 
     </RelativeLayout>
