--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".RegisterActivity"
-    android:background="@color/my_black">
+    android:background="@color/my_white2">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -134,7 +134,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:text="Login"
-                    android:textColor="@color/my_white"
+                    android:textColor="@color/my_black"
                     android:textSize="14sp" />
 
             </LinearLayout>
@@ -151,7 +151,7 @@
             android:layout_marginHorizontal="40dp"
             android:text="REGISTER"
             android:textSize="18sp"
-            android:textColor="@color/my_black"/>
+            android:textColor="@color/my_white2"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
